# tessocr

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  binding.gyp  gulpfile.js  index.js  package.json  publish-binaries.md  tessocr.js
examples/: fixtures.js  ocr.js  recognize.js  segline.js  segment.js  server.js  tokenize.js
examples/ocr/: ocr.js
examples/server/: server.js
lib/: segline.js  tessocr.js  utils.js
src/: helpers.h  tessocr.cc  tessocr.h
test/: fixtures.js  segline.test.js  tessocr.test.js  utils.test.js
